# polyvox

./: CMakeLists.txt  LICENSE  README.md  README.zh.md  environment.yml  polyvox-gui.spec
data/: input.mtl
demo/: demo.mtl
include/local/: color_quantizer.cpp  color_quantizer.h  command_line.cpp  command_line.h  file_utils.cpp  file_utils.h  logger.h  message.cpp  message.h  string_utils.h  xml_parser.cpp  xml_parser.h
locale/: en.json  ru.json  zh.json
script/: core_enums.py  external_tools.py  geometry_processor.py  localization.py  logger_config.py  main_gui.py  main_workflow.py
script/themes/: dark.qss  light.qss
src/: main.cpp
